refactor Post model and controller to change main image handling; update OpenAPI documentation for mainImageUrl
